--- a/Views/AircraftView.xaml
+++ b/Views/AircraftView.xaml
@@ -7,6 +7,34 @@
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
-            
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="Auto"/>
+            <ColumnDefinition Width="*"/>
+        </Grid.ColumnDefinitions>
+
+        <Border Grid.Column="0">
+            <Grid>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="Auto"/>
+                </Grid.RowDefinitions>
+
+                <StackPanel Grid.Row="0">
+                    <Button Grid.Row="0" Command="{Binding Path=OpenAircraftDataCmd}">Open Aircraft Data File</Button>
+                    <Button Grid.Row="1" Command="{Binding Path=SelectAircraftCmd}">Select Aircraft</Button>
+                </StackPanel>
+
+                <StackPanel Grid.Row="1">
+                    <Button Grid.Row="2" Command="{Binding Path=CreateAircraftCmd}">New Aircraft</Button>
+                    <Button Grid.Row="3" Command="{Binding Path=CreateChecklistCmd}">New Checklist</Button>
+                </StackPanel>
+            </Grid>
+        </Border>
+
+        <Border Grid.Column="1">
+            <ListView ItemsSource="{Binding Path=AircraftData}" SelectedItem="{Binding Path=SelectedAircraft}"/>
+        </Border>
     </Grid>
 </UserControl>
