--- a/Views/ChecklistView.xaml
+++ b/Views/ChecklistView.xaml
@@ -7,6 +7,102 @@
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
-            
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="Auto"/>
+            <ColumnDefinition Width="*"/>
+        </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="*"/>
+        </Grid.RowDefinitions>
+
+        <Border Grid.Column="0">
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="Auto"/>
+                    <ColumnDefinition Width="*"/>
+                </Grid.ColumnDefinitions>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="*"/>
+                </Grid.RowDefinitions>
+
+                <Border Grid.Row="3">
+                    <ListView
+                        x:Name="AllChecklistsView"
+                        ItemsSource="{Binding Path=CurrentAircraft.Checklists}"
+                        SelectedItem="{Binding Path=SelectedChecklist}"
+                    >
+                        <ListView.ItemTemplate>
+                            <DataTemplate>
+                                <Border>
+                                    <Grid>
+                                        <Grid.RowDefinitions>
+                                            <RowDefinition Height="Auto"/>
+                                            <RowDefinition Height="Auto"/>
+                                        </Grid.RowDefinitions>
+
+                                        <TextBlock Text="{Binding Path=Name}"/>
+                                        <ListView Grid.Row="1" ItemsSource="{Binding Path=Tags}">
+                                            <ListView.ItemsPanel>
+                                                <ItemsPanelTemplate>
+                                                    <WrapPanel Orientation="Horizontal" MaxWidth="200"/>
+                                                </ItemsPanelTemplate>
+                                            </ListView.ItemsPanel>
+                                            <ListView.ItemTemplate>
+                                                <DataTemplate>
+                                                    <Border>
+                                                        <TextBlock Text="{Binding}"/>
+                                                    </Border>
+                                                </DataTemplate>
+                                            </ListView.ItemTemplate>
+                                        </ListView>
+                                    </Grid>
+                                </Border>
+                            </DataTemplate>
+                        </ListView.ItemTemplate>
+                    </ListView>
+                </Border>
+            </Grid>
+        </Border>
+
+        <Border Grid.Column="1">
+            <Grid>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="*"/>
+                </Grid.RowDefinitions>
+
+                <TextBlock Grid.Row="0" Text="{Binding Path=SelectedChecklist.Name}" FontSize="20"/>
+
+                <ListView Grid.Row="2" Grid.IsSharedSizeScope="True" ItemsSource="{Binding Path=SelectedChecklist.Items}">
+                    <ListView.ItemTemplate>
+                        <DataTemplate>
+                            <Border>
+                                <Grid>
+                                    <Grid.ColumnDefinitions>
+                                        <ColumnDefinition SharedSizeGroup="a0"/>
+                                        <ColumnDefinition SharedSizeGroup="a1"/>
+                                        <ColumnDefinition SharedSizeGroup="a2"/>
+                                        <ColumnDefinition SharedSizeGroup="a3"/>
+                                        <ColumnDefinition SharedSizeGroup="a4"/>
+                                        <ColumnDefinition SharedSizeGroup="a5"/>
+                                    </Grid.ColumnDefinitions>
+
+                                    <CheckBox IsChecked="{Binding Path=Checked}"/>
+                                    <TextBlock Grid.Column="1" Padding="10,0" Text="{Binding Path=Index}"/>
+                                    <TextBlock Grid.Column="1" Padding="10,0" Text="{Binding Path=Action}"/>
+                                    <TextBlock Grid.Column="2" Padding="10,0" Text="{Binding Path=State}"/>
+                                    <TextBlock Grid.Column="3" Text="{Binding Path=Description}"/>
+                                    <TextBlock Grid.Column="4" Padding="10,0,0,0" Text="{Binding Path=ExtraInfo}"/>
+                                </Grid>
+                            </Border>
+                        </DataTemplate>
+                    </ListView.ItemTemplate>
+                </ListView>
+            </Grid>
+        </Border>
     </Grid>
 </UserControl>
