--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:ChecklistApp"
         xmlns:views="clr-namespace:ChecklistApp.Views"
-        mc:Ignorable="d"
+        mc:Ignorable="d" Background="{StaticResource MainBG}"
         Title="MainWindow" Height="450" Width="800">
     <Grid>
         <Grid.RowDefinitions>
