--- a/Styles.xaml
+++ b/Styles.xaml
@@ -16,6 +16,7 @@
     </Style>
     <Style TargetType="TextBlock" x:Key="WhiteText">
         <Setter Property="Foreground" Value="{StaticResource MainText}"/>
+        <Setter Property="Background" Value="{StaticResource MainBG}"/>
     </Style>
     <Style TargetType="TextBox">
         <Setter Property="Foreground" Value="{StaticResource MainText}"/>
@@ -63,5 +64,17 @@
         <Setter Property="FontWeight" Value="Bold"/>
         <Setter Property="Background" Value="{StaticResource ButtonBG}"/>
         <Setter Property="Foreground" Value="{StaticResource MainText}"/>
+    </Style>
+    <Style TargetType="Button" x:Key="SubtButton" BasedOn="{StaticResource AddButton}">
+        <Setter Property="Content" Value="-"/>
+        <Setter Property="FontSize" Value="22"/>
+    </Style>
+    <Style TargetType="TextBlock" x:Key="MediumTitle" BasedOn="{StaticResource WhiteText}">
+        <Setter Property="FontSize" Value="16"/>
+        <Setter Property="FontWeight" Value="DemiBold"/>
+    </Style>
+    <Style TargetType="TextBlock" x:Key="LargeTitle" BasedOn="{StaticResource WhiteText}">
+        <Setter Property="FontSize" Value="20"/>
+        <Setter Property="FontWeight" Value="DemiBold"/>
     </Style>
 </ResourceDictionary>
