--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -7,6 +7,9 @@
         xmlns:views="clr-namespace:ChecklistApp.Views"
         mc:Ignorable="d" Background="{StaticResource MainBG}"
         Title="MainWindow" Height="450" Width="800">
+    <Window.InputBindings>
+        <KeyBinding Command="{Binding Path=SaveAllCmd}" Key="S" Modifiers="Shift+Ctrl"/>
+    </Window.InputBindings>
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
@@ -23,7 +26,7 @@
             <TabItem Header="Checklists">
                 <views:ChecklistView/>
             </TabItem>
-            <TabItem Header="Aircraft">
+            <TabItem Header="Aircraft" IsSelected="True">
                 <views:AircraftView/>
             </TabItem>
             <TabItem Header="Tag Manager">
