--- a/Views/AircraftView.xaml
+++ b/Views/AircraftView.xaml
@@ -7,6 +7,9 @@
              xmlns:enums="clr-namespace:ChecklistApp.Models.Enums"
              mc:Ignorable="d"  Background="{StaticResource MainBG}"
              d:DesignHeight="450" d:DesignWidth="800">
+    <UserControl.InputBindings>
+        <KeyBinding Command="{Binding Path=SaveAllCmd}" Key="S" Modifiers="Ctrl+Shift"/>
+    </UserControl.InputBindings>
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="Auto"/>
@@ -25,7 +28,7 @@
                 <Border Grid.Row="0" Padding="0,10,0,10">
                     <StackPanel>
                         <Button Command="{Binding Path=OpenAircraftDataCmd}">Open Aircraft Data File</Button>
-                        <Button Command="{Binding Path=SelectAircraftCmd}">Select Aircraft</Button>
+                        <!--<Button Command="{Binding Path=SelectAircraftCmd}">Select Aircraft</Button>-->
                     </StackPanel>
                 </Border>
 
@@ -48,6 +51,14 @@
                         <Button Command="{Binding Path=SaveSelectedAircraftCmd}">Save Selected</Button>
                     </StackPanel>
                 </Border>
+
+                <CheckBox
+                    Foreground="{StaticResource MainText}"
+                    IsChecked="{Binding Path=KeepChecklistsCompleted}"
+                    Grid.Row="3"
+                >
+                    Keep completed checklists
+                </CheckBox>
             </Grid>
         </Border>
 
